--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
+    overflow: hidden;
   }
   
   html {
@@ -13,7 +14,6 @@
   body{
     background-color: rgb(56, 56, 56);
     height: 100%;
-    overflow: auto;
   }
   
   header{
