--- a/style.css
+++ b/style.css
@@ -1,121 +1,119 @@
 *{
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
-    overflow: hidden;
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+}
+
+body{
+    background-image: url("./background.jpg");
+    height: 100%; 
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover !important;
+}
+
+nav{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  min-height: 15vh;
+  font-family: 'Courier New', Courier, monospace;
+}
+
+.logo a {
+  color: white;
+  letter-spacing: 0px;
+  font-size: 25px;
+  font-weight: bolder;
+  text-decoration: none;
+  word-spacing: -5px;
+}
+
+.nav-links{
+  display: flex;
+  justify-content: space-around;
+  width: 35%;
+}
+
+.nav-links li{
+  list-style: none;
+}
+
+.nav-links a{
+  color: white;
+  text-shadow: 3px 3px 10px #fff;
+  text-decoration: none;
+  letter-spacing: 3px;
+  font-weight: bold;
+  font-size: 20px;
+}
+
+.nav-links a:hover{
+    color: rgb(173, 173, 173);
+    text-shadow: 2px 2px 10px #fff;
   }
-  
-  html {
-    height  : 100%;
-    overflow: hidden;
-    font-family: 'Pacifico', cursive;
-  }
-  
-  body{
-    background-color: rgb(56, 56, 56);
-    height: 100%;
-  }
-  
-  header{
-    position: -webkit-sticky; /* Safari */
-    position: sticky;
-    top: 0;
-    box-shadow: 0px 3px 10px;
-  } 
-  
-  nav{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    min-height: 8vh;
-    background-color: rgb(29, 29, 29);
-    font-family: 'Courier New', Courier, monospace;
-  }
-  
-  .logo a {
-    color: white;
-    letter-spacing: 3px;
-    font-size: 25px;
-    font-weight: bolder;
-    text-decoration: none;
-    padding: 0px;
-  }
-  
+
+.menubtn{
+  display: none;
+  cursor: pointer;
+}
+
+.menubtn div{
+  width: 25px;
+  height: 3px;
+  background-color: white;
+  margin: 6px;
+}
+
+@media screen and (max-width:1024px){
   .nav-links{
-    display: flex;
-    justify-content: space-around;
-    width: 45%;
+    width: 60%;
   }
-  
-  .nav-links li{
-    list-style: none;
+}
+
+@media screen and (max-width:768px){
+  body{
+    overflow-x: hidden;
   }
-  
-  .nav-links a{
-    color: rgb(150, 150, 150);
-    text-decoration: none;
-    letter-spacing: 3px;
-    font-weight: bold;
-    font-size: 20px;
-  }
-  
-  .menubtn{
+  #wowslider-container1{
     display: none;
-    cursor: pointer;
   }
-  
-  .menubtn div{
-    width: 25px;
-    height: 3px;
-    background-color: rgb(150, 150, 150);
-    margin: 6px;
+  nav{
+      background-color: black;
   }
-  
-  @media screen and (max-width:1024px){
-    .nav-links{
-      width: 60%;
-    }
+  .nav-links{
+    position: fixed;
+    right: 0px;
+    height: 82vh;
+    top: 15vh;
+    background-color: rgb(0, 0, 0, 0.7);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 50%;
+    transform: translateX(100%);
+    transition: transform 0.5s ease-in;
+    z-index: 100;
   }
-  
-  @media screen and (max-width:768px){
-    body{
-      overflow-x: hidden;
-    }
-    .nav-links{
-      position: fixed;
-      right: 0px;
-      height: 82vh;
-      top: 8vh;
-      background-color: rgb(150, 150, 150);
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      width: 50%;
-      transform: translateX(100%);
-      transition: transform 0.5s ease-in;
-    }
-    .nav-links li{
-      opacity: 0;
-    }
-    .nav-links a{
-      color: black;
-    }
-    .menubtn{
-      display: block;
-    }
+  .nav-links li{
+    opacity: 0;
   }
-  
-  .nav-active{
-    transform: translateX(0%);
+  .menubtn{
+    display: block;
   }
-  
-  @keyframes navLinkFade{
-    from{
-      opacity: 0;
-      transform: translateX(50px);
-    }
-    to{
-      opacity: 1;
-      transform: translateX(0px);
-    }
+}
+
+.nav-active{
+  transform: translateX(0%);
+}
+
+@keyframes navLinkFade{
+  from{
+    opacity: 0;
+    transform: translateX(50px);
   }
+  to{
+    opacity: 1;
+    transform: translateX(0px);
+  }
+}
