--- a/style.css
+++ b/style.css
@@ -29,6 +29,16 @@ nav{
   word-spacing: -5px;
 }
 
+.logo h4 {
+    color: white;
+    letter-spacing: 0px;
+    font-size: 25px;
+    font-weight: bolder !important;
+    text-decoration: none;
+    word-spacing: -5px;
+  }
+  
+
 .nav-links{
   display: flex;
   justify-content: space-around;
