changed folder name and some paths

--- a/projects/HackersParadise/views/index.ejs
+++ b/projects/HackersParadise/views/index.ejs
@@ -13,7 +13,7 @@
     <div class="container-fluid">
         <div class="row p-3 bg-dark shadow align-items-center">
             <div class="col-6">
-                <a href="javascript:window.open('//localhost:5500/index.html', target='_self')" style="text-decoration: none;">
+                <a href="javascript:window.open('//localhost:5500/projects/hackersparadise/index.html', target='_self')" style="text-decoration: none;">
                     <h2 style="color: #f8f9fa;">Hackers Paradise</h2>
                 </a>
             </div>
